login,signup page + logic

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -71,3 +71,13 @@ input[type='range']#music-volume-input:hover {
 input[type='range']#music-volume-input:hover::-webkit-slider-thumb {
   visibility: visible;
 }
+.alert-danger {
+  background-color: #f8d7da;
+  border-color: #f5c2c7;
+  color: #842029;
+}
+.alert-success {
+  background-color: #d1e7dd;
+  border-color: #badbcc;
+  color: #0f5132;
+}
