--- a/styles/globals.css
+++ b/styles/globals.css
@@ -81,3 +81,20 @@ input[type='range']#music-volume-input:hover::-webkit-slider-thumb {
   border-color: #badbcc;
   color: #0f5132;
 }
+
+.hiddenBanner {
+  opacity: 0;
+  transform: translateX(1rem);
+  transform: all 0.5s ease;
+}
+.triangle {
+  position: absolute;
+  top: 1.5rem;
+  left: -1rem;
+  width: 0px;
+  height: 0px;
+  border-style: solid;
+  border-width: 0 12.5px 14px 12.5px;
+  border-color: transparent transparent #0d72ea transparent;
+  transform: rotate(270deg);
+}
