--- a/styles/globals.css
+++ b/styles/globals.css
@@ -104,6 +104,22 @@ input[type='range']#music-volume-input:hover::-webkit-slider-thumb {
   transition: all 0.5s ease;
   visibility: hidden;
 }
+.hiddenMobilePlayer {
+  opacity: 0;
+  z-index: -5;
+  position: absolute;
+  transform: translateY(40rem);
+  transition: all 0.3s ease;
+  visibility: hidden;
+}
+.hiddenSetting {
+  opacity: 0;
+  z-index: -5;
+  position: absolute;
+  transform: translateX(50rem);
+  transition: all 0.5s ease;
+  visibility: hidden;
+}
 .triangle {
   position: absolute;
   top: 1.5rem;
